- Better High DPI compatibility.
- Use Windows 10 theme by default on Windows 8 and newer.
- Cleanedup JPEG options page glitches (d4k0).
- Delay load shcore.dll to avoid a C++ Builder bug on WINE (trlkly).
- Make child windows show always on top, even if main window uses AlwaysOnTop=false (hairycactus).
- Fix Windows 8.1 and later detection, by using RtlGetVersion because old previous functions (GetVersion, IsWin10OrLater, ...) only work for manifested applications.
- Added ECT 0.2 x86 and x64 builds (thanks Felix Hanau).
- Updated TruePNG to 0.6.1.9.
- Revert to Ghostcript 9.15 since Ghostcript 9.18 crashes, and 9.16 has worse compression ratios (hairycactus).
- Updated to cppcheck 1.72.
- Some minor optimizations and code cleanup.


8.10 - 2015/12/26
- Enhanced GZ, JPEG and PNG compression by adding ECT 0.1 by Felix Hanau.
- Fixed Windows 10 theme (d4k0).
- Workedarround a bug in C++ Builder Seattle that made executables require BORLANDMM.DLL -https://forums.embarcadero.com/thread.jspa?messageID=706835- (d4k0).
- Fixed a problem with disabled menu items after optimization (d4k0).

8.00 - 2015/12/25
- Added Windows 10 theme, enabled by default on Windows 10 or later.
- Prevented missing BTHPROPS.CPL and BLUETOOTHAPIS.DLL error on Wine by making them delay loaded on Win32 binaries to overcome C++ Builder XE7 bug (trlkly).
- Removed custom window frame, because it was always looked black with C++ Builder 10.
- Made check for updates detect faulty routers and switches returning HTML content when no valid data connection exists (Armin Mueller).
- Added INI option TempDirectory="" to specify FileOptimizer temporary folder to use. If empty, it will use system defaults. Set it to a fast SSD drive or ramdisk to increase performance (Newtomic).
- Prevented Windows message about "Program not responding" when adding lots of files (Zulfikar Raditya Hernanta).
- Upgraded to Ghostcript 9.18.
- Updated ImageMagick to 7.0.0.0 with HDRI support.
- Updated pngquant to 2.5.1.